syntax = "proto3";

package mpataki.playground.proto.user.v1;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.mpataki.playground.proto.user.v1";
option go_package = "mpataki.com/playground/gen/go/user/v1";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
}

message CreateUserRequest {
}

message CreateUserResponse {
    string user_id = 1;
}
